--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 					</ul>
 
 					<ul class="copyright">
-						<li>&copy; McKinley Forster</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Cauldron Coffee</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 				</footer>
